--- a/mitaliseth.ipynb
+++ b/mitaliseth.ipynb
@@ -3971,8 +3971,365 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 74,
+   "id": "c47d3ec7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>funded_amnt</th>\n",
+       "      <th>funded_amnt_inv</th>\n",
+       "      <th>term</th>\n",
+       "      <th>int_rate</th>\n",
+       "      <th>installment</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>sub_grade</th>\n",
+       "      <th>emp_length</th>\n",
+       "      <th>home_ownership</th>\n",
+       "      <th>...</th>\n",
+       "      <th>total_pymnt</th>\n",
+       "      <th>total_pymnt_inv</th>\n",
+       "      <th>total_rec_prncp</th>\n",
+       "      <th>total_rec_int</th>\n",
+       "      <th>last_pymnt_d</th>\n",
+       "      <th>last_pymnt_amnt</th>\n",
+       "      <th>last_credit_pull_d</th>\n",
+       "      <th>IncomeBucket</th>\n",
+       "      <th>issue_year</th>\n",
+       "      <th>issue_month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5000</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>4975.0</td>\n",
+       "      <td>36 months</td>\n",
+       "      <td>10.65</td>\n",
+       "      <td>162.87</td>\n",
+       "      <td>B</td>\n",
+       "      <td>B2</td>\n",
+       "      <td>10+ years</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5863.155187</td>\n",
+       "      <td>5833.84</td>\n",
+       "      <td>5000.00</td>\n",
+       "      <td>863.16</td>\n",
+       "      <td>Jan-15</td>\n",
+       "      <td>171.62</td>\n",
+       "      <td>May-16</td>\n",
+       "      <td>VL</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>Dec</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2500</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>60 months</td>\n",
+       "      <td>15.27</td>\n",
+       "      <td>59.83</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C4</td>\n",
+       "      <td>&lt; 1 year</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1008.710000</td>\n",
+       "      <td>1008.71</td>\n",
+       "      <td>456.46</td>\n",
+       "      <td>435.17</td>\n",
+       "      <td>Apr-13</td>\n",
+       "      <td>119.66</td>\n",
+       "      <td>Sep-13</td>\n",
+       "      <td>VL</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>Dec</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2400</td>\n",
+       "      <td>2400</td>\n",
+       "      <td>2400.0</td>\n",
+       "      <td>36 months</td>\n",
+       "      <td>15.96</td>\n",
+       "      <td>84.33</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C5</td>\n",
+       "      <td>10+ years</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3005.666844</td>\n",
+       "      <td>3005.67</td>\n",
+       "      <td>2400.00</td>\n",
+       "      <td>605.67</td>\n",
+       "      <td>Jun-14</td>\n",
+       "      <td>649.91</td>\n",
+       "      <td>May-16</td>\n",
+       "      <td>VL</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>Dec</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10000</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>36 months</td>\n",
+       "      <td>13.49</td>\n",
+       "      <td>339.31</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C1</td>\n",
+       "      <td>10+ years</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12231.890000</td>\n",
+       "      <td>12231.89</td>\n",
+       "      <td>10000.00</td>\n",
+       "      <td>2214.92</td>\n",
+       "      <td>Jan-15</td>\n",
+       "      <td>357.48</td>\n",
+       "      <td>Apr-16</td>\n",
+       "      <td>L</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>Dec</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5000</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>36 months</td>\n",
+       "      <td>7.90</td>\n",
+       "      <td>156.46</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A4</td>\n",
+       "      <td>3 years</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5632.210000</td>\n",
+       "      <td>5632.21</td>\n",
+       "      <td>5000.00</td>\n",
+       "      <td>632.21</td>\n",
+       "      <td>Jan-15</td>\n",
+       "      <td>161.03</td>\n",
+       "      <td>Jan-16</td>\n",
+       "      <td>VL</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>Dec</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7000</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>7000.0</td>\n",
+       "      <td>60 months</td>\n",
+       "      <td>15.96</td>\n",
+       "      <td>170.08</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C5</td>\n",
+       "      <td>8 years</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10110.840000</td>\n",
+       "      <td>10110.84</td>\n",
+       "      <td>6985.61</td>\n",
+       "      <td>3125.23</td>\n",
+       "      <td>May-16</td>\n",
+       "      <td>1313.76</td>\n",
+       "      <td>May-16</td>\n",
+       "      <td>L</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>Dec</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>36 months</td>\n",
+       "      <td>18.64</td>\n",
+       "      <td>109.43</td>\n",
+       "      <td>E</td>\n",
+       "      <td>E1</td>\n",
+       "      <td>9 years</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3939.135294</td>\n",
+       "      <td>3939.14</td>\n",
+       "      <td>3000.00</td>\n",
+       "      <td>939.14</td>\n",
+       "      <td>Jan-15</td>\n",
+       "      <td>111.34</td>\n",
+       "      <td>Dec-14</td>\n",
+       "      <td>L</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>Dec</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>5600</td>\n",
+       "      <td>5600</td>\n",
+       "      <td>5600.0</td>\n",
+       "      <td>60 months</td>\n",
+       "      <td>21.28</td>\n",
+       "      <td>152.39</td>\n",
+       "      <td>F</td>\n",
+       "      <td>F2</td>\n",
+       "      <td>4 years</td>\n",
+       "      <td>OWN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>646.020000</td>\n",
+       "      <td>646.02</td>\n",
+       "      <td>162.02</td>\n",
+       "      <td>294.94</td>\n",
+       "      <td>Apr-12</td>\n",
+       "      <td>152.39</td>\n",
+       "      <td>Aug-12</td>\n",
+       "      <td>L</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>Dec</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5375</td>\n",
+       "      <td>5375</td>\n",
+       "      <td>5350.0</td>\n",
+       "      <td>60 months</td>\n",
+       "      <td>12.69</td>\n",
+       "      <td>121.45</td>\n",
+       "      <td>B</td>\n",
+       "      <td>B5</td>\n",
+       "      <td>&lt; 1 year</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1476.190000</td>\n",
+       "      <td>1469.34</td>\n",
+       "      <td>673.48</td>\n",
+       "      <td>533.42</td>\n",
+       "      <td>Nov-12</td>\n",
+       "      <td>121.45</td>\n",
+       "      <td>Mar-13</td>\n",
+       "      <td>VL</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>Dec</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>6500</td>\n",
+       "      <td>6500</td>\n",
+       "      <td>6500.0</td>\n",
+       "      <td>60 months</td>\n",
+       "      <td>14.65</td>\n",
+       "      <td>153.45</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C3</td>\n",
+       "      <td>5 years</td>\n",
+       "      <td>OWN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7678.017673</td>\n",
+       "      <td>7678.02</td>\n",
+       "      <td>6500.00</td>\n",
+       "      <td>1178.02</td>\n",
+       "      <td>Jun-13</td>\n",
+       "      <td>1655.54</td>\n",
+       "      <td>Dec-15</td>\n",
+       "      <td>H</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>Dec</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    loan_amnt  funded_amnt  funded_amnt_inv        term  int_rate  \\\n",
+       "0        5000         5000           4975.0   36 months     10.65   \n",
+       "1        2500         2500           2500.0   60 months     15.27   \n",
+       "2        2400         2400           2400.0   36 months     15.96   \n",
+       "3       10000        10000          10000.0   36 months     13.49   \n",
+       "5        5000         5000           5000.0   36 months      7.90   \n",
+       "6        7000         7000           7000.0   60 months     15.96   \n",
+       "7        3000         3000           3000.0   36 months     18.64   \n",
+       "8        5600         5600           5600.0   60 months     21.28   \n",
+       "9        5375         5375           5350.0   60 months     12.69   \n",
+       "10       6500         6500           6500.0   60 months     14.65   \n",
+       "\n",
+       "    installment grade sub_grade emp_length home_ownership  ...   total_pymnt  \\\n",
+       "0        162.87     B        B2  10+ years           RENT  ...   5863.155187   \n",
+       "1         59.83     C        C4   < 1 year           RENT  ...   1008.710000   \n",
+       "2         84.33     C        C5  10+ years           RENT  ...   3005.666844   \n",
+       "3        339.31     C        C1  10+ years           RENT  ...  12231.890000   \n",
+       "5        156.46     A        A4    3 years           RENT  ...   5632.210000   \n",
+       "6        170.08     C        C5    8 years           RENT  ...  10110.840000   \n",
+       "7        109.43     E        E1    9 years           RENT  ...   3939.135294   \n",
+       "8        152.39     F        F2    4 years            OWN  ...    646.020000   \n",
+       "9        121.45     B        B5   < 1 year           RENT  ...   1476.190000   \n",
+       "10       153.45     C        C3    5 years            OWN  ...   7678.017673   \n",
+       "\n",
+       "   total_pymnt_inv total_rec_prncp total_rec_int  last_pymnt_d  \\\n",
+       "0          5833.84         5000.00        863.16        Jan-15   \n",
+       "1          1008.71          456.46        435.17        Apr-13   \n",
+       "2          3005.67         2400.00        605.67        Jun-14   \n",
+       "3         12231.89        10000.00       2214.92        Jan-15   \n",
+       "5          5632.21         5000.00        632.21        Jan-15   \n",
+       "6         10110.84         6985.61       3125.23        May-16   \n",
+       "7          3939.14         3000.00        939.14        Jan-15   \n",
+       "8           646.02          162.02        294.94        Apr-12   \n",
+       "9          1469.34          673.48        533.42        Nov-12   \n",
+       "10         7678.02         6500.00       1178.02        Jun-13   \n",
+       "\n",
+       "   last_pymnt_amnt  last_credit_pull_d  IncomeBucket issue_year  issue_month  \n",
+       "0           171.62              May-16            VL       2011          Dec  \n",
+       "1           119.66              Sep-13            VL       2011          Dec  \n",
+       "2           649.91              May-16            VL       2011          Dec  \n",
+       "3           357.48              Apr-16             L       2011          Dec  \n",
+       "5           161.03              Jan-16            VL       2011          Dec  \n",
+       "6          1313.76              May-16             L       2011          Dec  \n",
+       "7           111.34              Dec-14             L       2011          Dec  \n",
+       "8           152.39              Aug-12             L       2011          Dec  \n",
+       "9           121.45              Mar-13            VL       2011          Dec  \n",
+       "10         1655.54              Dec-15             H       2011          Dec  \n",
+       "\n",
+       "[10 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0ee93732",
+   "id": "aa316938",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3980,7 +4337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64cf62d2",
+   "id": "3e950699",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3988,15 +4345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3302fb31",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f92f783b",
+   "id": "f9f96a70",
    "metadata": {},
    "outputs": [],
    "source": []
